--- a/template.yaml
+++ b/template.yaml
@@ -91,11 +91,9 @@ Resources:
     Properties:
       TemplateURL: ./infrastructure/resources/cognito.yaml
       Parameters:
-        GlobalCloudFrontHostedZoneId: !Ref GlobalCloudFrontHostedZoneId
-        HostedZoneId: !If
-          - CreateHostedZoneCondition
-          - !GetAtt HostedZoneStack.Outputs.HostedZoneId
-          - !Ref HostedZoneId
+        AdminGroupName: !Ref AdminGroupName
+        ResidentGroupName: !Ref ResidentGroupName
+        GuardGroupName: !Ref GuardGroupName
 
 Outputs:
   APIGatewayEndpoint:
