--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -8,6 +8,8 @@ Parameters:
     Type: String
   GuardGroupName:
     Type: String
+  CognitoDomainPrefix:
+    Type: String
 
 Resources:
   CognitoUserPool:
