--- a/template.yaml
+++ b/template.yaml
@@ -82,9 +82,11 @@ Resources:
     Properties:
       TemplateURL: ./infrastructure/resources/record-set.yaml
       Parameters:
-        AdminGroupName: !Ref AdminGroupName
-        ResidentGroupName: !Ref ResidentGroupName
-        GuardGroupName: !Ref GuardGroupName
+        GlobalCloudFrontHostedZoneId: !Ref GlobalCloudFrontHostedZoneId
+        HostedZoneId: !If
+          - CreateHostedZoneCondition
+          - !GetAtt HostedZoneStack.Outputs.HostedZoneId
+          - !Ref HostedZoneId
 
   CognitoStack:
     Type: AWS::CloudFormation::Stack
