--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -18,13 +18,13 @@ Resources:
         HostedZoneId: !Ref GlobalCloudFrontHostedZoneId
         DNSName: !ImportValue CloudFrontDistributionDomainName
         EvaluateTargetHealth: false # Important for CloudFront
-  CloudFrontLoginVMSAliasRecord:
-    Type: AWS::Route53::RecordSet
-    Properties:
-      HostedZoneId: !Ref HostedZoneId
-      Name: login.vms.alphinecodetech.click
-      Type: A
-      AliasTarget:
-        HostedZoneId: !Ref GlobalCloudFrontHostedZoneId
-        DNSName: !ImportValue CloudFrontDistributionDomainName
-        EvaluateTargetHealth: false # Important for CloudFront
+  # CloudFrontLoginVMSAliasRecord:
+  #   Type: AWS::Route53::RecordSet
+  #   Properties:
+  #     HostedZoneId: !Ref HostedZoneId
+  #     Name: login.vms.alphinecodetech.click
+  #     Type: A
+  #     AliasTarget:
+  #       HostedZoneId: !Ref GlobalCloudFrontHostedZoneId
+  #       DNSName: !ImportValue CloudFrontDistributionDomainName
+  #       EvaluateTargetHealth: false # Important for CloudFront
