--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -6,6 +6,8 @@ Parameters:
     Type: String
   HostedZoneId:
     Type: String
+  CognitoCustomDomainName:
+    Type: String
 
 Resources:
   CloudFrontVMSAliasRecord:
@@ -18,13 +20,13 @@ Resources:
         HostedZoneId: !Ref GlobalCloudFrontHostedZoneId
         DNSName: !ImportValue CloudFrontDistributionDomainName
         EvaluateTargetHealth: false # Important for CloudFront
-  # CloudFrontLoginVMSAliasRecord:
-  #   Type: AWS::Route53::RecordSet
-  #   Properties:
-  #     HostedZoneId: !Ref HostedZoneId
-  #     Name: login.vms.alphinecodetech.click
-  #     Type: A
-  #     AliasTarget:
-  #       HostedZoneId: !Ref GlobalCloudFrontHostedZoneId
-  #       DNSName: !ImportValue CloudFrontDistributionDomainName
-  #       EvaluateTargetHealth: false # Important for CloudFront
+
+  CloudFrontLoginVMSCNAMERecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref HostedZoneId
+      Name: !Ref CognitoCustomDomainName
+      Type: CNAME
+      TTL: 300
+      ResourceRecords:
+        - !ImportValue CognitoCustomDomain
