--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -10,7 +10,7 @@ Parameters:
     Type: String
 
 Resources:
-  CloudFrontVMSAliasRecord:
+  CloudFrontARecord:
     Type: AWS::Route53::RecordSet
     Properties:
       HostedZoneId: !Ref HostedZoneId
