--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -71,14 +71,6 @@ Resources:
         IdToken: minutes
         RefreshToken: days
 
-  # CognitoUserPoolDomain:
-  #   Type: AWS::Cognito::UserPoolDomain
-  #   Properties:
-  #     Domain: !Ref CognitoDomainPrefix
-  #     UserPoolId: !Ref CognitoUserPool
-  #     # CustomDomainConfig:
-  #     #   CertificateArn: arn:aws:acm:us-east-1:121216464768:certificate/4f441ddb-b0d2-493d-b2d0-e5b3ed387553
-
   CognitoCustomDomain:
     Type: AWS::Cognito::UserPoolDomain
     Properties:
@@ -116,3 +108,7 @@ Outputs:
     Value: !Ref CognitoUserPool
   CognitoUserPoolClient:
     Value: !Ref CognitoUserPoolClient
+  CognitoAliasTarget:
+    Value: !GetAtt CognitoCustomDomain.CloudFrontDistribution
+    Export:
+      Name: CognitoAliasTarget
