--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -21,13 +21,12 @@ Resources:
         DNSName: !ImportValue CloudFrontDistributionDomainName
         EvaluateTargetHealth: false # Important for CloudFront
 
-
-  # CloudFrontLoginVMSCNAMERecord:
-  #   Type: AWS::Route53::RecordSet
-  #   Properties:
-  #     HostedZoneId: !Ref HostedZoneId
-  #     Name: !Ref CognitoCustomDomainName
-  #     Type: CNAME
-  #     TTL: 300
-  #     ResourceRecords:
-  #       - !ImportValue CognitoCustomDomain
+  CloudFrontLoginVMSCNAMERecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref HostedZoneId
+      Name: !Ref CognitoCustomDomainName
+      Type: CNAME
+      TTL: 300
+      ResourceRecords:
+        - !ImportValue CognitoAliasTarget
