--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -29,4 +29,4 @@ Resources:
       Type: CNAME
       TTL: 300
       ResourceRecords:
-        - !ImportValue CognitoAliasTarget
+        - CognitoAliasTarget
