--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -111,4 +111,4 @@ Outputs:
   CognitoAliasTarget:
     Value: !GetAtt CognitoCustomDomain.CloudFrontDistribution
     Export:
-      Name: CognitoAliasTarget
+      Name: !Sub "${AWS::StackName}-CognitoAliasTarget"
