!Sub "${AWS::StackName}-CognitoAliasTarget"

--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -29,4 +29,5 @@ Resources:
       Type: CNAME
       TTL: 300
       ResourceRecords:
-        - !ImportValue !Sub "${AWS::StackName}-CognitoAliasTarget"
+        - !ImportValue 
+          !Sub "${AWS::StackName}-CognitoAliasTarget"
