--- a/template.yaml
+++ b/template.yaml
@@ -122,7 +122,7 @@ Outputs:
     Description: Cognito User Pool Authority URL (for OIDC client)
     Value: !Sub https://cognito-idp.${AWS::Region}.amazonaws.com/${CognitoStack.Outputs.CognitoUserPool}
   CognitoAliasTarget:
-    Value: !GetAtt HostedZoneRecordSetStack.Outputs.CognitoAliasTarget
+    Value: !GetAtt CognitoStack.Outputs.CognitoAliasTarget
 
 # More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
 Globals:
