--- a/infrastructure/resources/api-gateway-lambda.yaml
+++ b/infrastructure/resources/api-gateway-lambda.yaml
@@ -38,6 +38,7 @@ Resources:
             TableName: !ImportValue VisitorsTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make table name accessible as environment variable from function code during execution
           VISITORS_TABLE: !ImportValue VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
@@ -72,6 +73,7 @@ Resources:
               Resource: "*"
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           POLICY_STORE_ID: !ImportValue VisitorManagementPolicyStore
       Events:
         Api:
@@ -104,6 +106,7 @@ Resources:
             TableName: !ImportValue VisitRequestsTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           # Make table name accessible as environment variable from function code during execution
@@ -142,6 +145,7 @@ Resources:
             TableName: !ImportValue VisitorsTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make table name accessible as environment variable from function code during execution
           VISITORS_TABLE: !ImportValue VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
@@ -174,6 +178,7 @@ Resources:
             TableName: !ImportValue InviteLinksTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make table name accessible as environment variable from function code during execution
           INVITE_LINKS_TABLE: !ImportValue InviteLinksTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
@@ -206,6 +211,7 @@ Resources:
             TableName: !ImportValue VisitRequestsTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make table name accessible as environment variable from function code during execution
           VISIT_REQUESTS_TABLE: !ImportValue VisitRequestsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
@@ -241,6 +247,7 @@ Resources:
             TableName: !ImportValue VisitorsTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           VISITORS_TABLE: !ImportValue VisitorsTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
@@ -272,6 +279,7 @@ Resources:
             TableName: !ImportValue InviteLinksTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
@@ -303,6 +311,7 @@ Resources:
             TableName: !ImportValue VisitRequestsTable
       Environment:
         Variables:
+          APP_FRONTEND_BASE_URL: !Sub "https://${SubDomain}"
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
           ENDPOINT_OVERRIDE: ""
           VISIT_REQUESTS_TABLE: !ImportValue VisitRequestsTable
