--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -44,8 +44,9 @@ Resources:
           RequireUppercase: true
       UsernameAttributes:
         - email
-      AutoVerifiedAttributes:
-        - email
+      AutoVerifiedAttributes: []
+      AdminCreateUserConfig:
+        AllowAdminCreateUserOnly: false
       # DeletionProtection: ACTIVE
 
   CognitoUserPoolClient:
