- Name: "phone_number"           Required: true

--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -33,7 +33,7 @@ Resources:
           Required: true
           Mutable: true
         - Name: "phone_number"
-          Required: false
+          Required: true
           Mutable: true
       Policies:
         PasswordPolicy:
