--- a/template.yaml
+++ b/template.yaml
@@ -78,6 +78,7 @@ Resources:
 
   CloudFrontStack:
     Type: AWS::CloudFormation::Stack
+    DependsOn: S3BucketStack
     Properties:
       TemplateURL: ./infrastructure/resources/cloudfront.yaml
       Parameters:
@@ -118,13 +119,13 @@ Outputs:
     Value: !Sub https://${ApiGatewayLambdaStack.Outputs.ApiGatewayApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/
   CloudFrontDistributionId:
     Description: CloudFront Distribution ID for hosting web front end
-    Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistributionId
+    Value: !GetAtt CloudFrontStack.Outputs.CloudFrontDistributionId
   CloudFrontDistributionDomainName:
     Description: CloudFront Distribution Domain Name for accessing web front end
-    Value: !GetAtt S3BucketCloudFrontStack.Outputs.CloudFrontDistributionDomainName
+    Value: !GetAtt CloudFrontStack.Outputs.CloudFrontDistributionDomainName
   WebS3BucketName:
     Description: S3 Bucket for hosting web frontend
-    Value: !GetAtt S3BucketCloudFrontStack.Outputs.WebS3BucketName
+    Value: !GetAtt S3BucketStack.Outputs.WebS3BucketName
   UserPoolId:
     Description: Cognito User Pool ID
     Value: !GetAtt CognitoStack.Outputs.CognitoUserPool
