--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -46,7 +46,7 @@ Resources:
         - email
       AutoVerifiedAttributes:
         - email
-      DeletionProtection: ACTIVE
+      # DeletionProtection: ACTIVE
 
   CognitoUserPoolClient:
     Type: AWS::Cognito::UserPoolClient
