--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -85,15 +85,16 @@ Resources:
       CustomDomainConfig:
         CertificateArn: !Ref AcmCertificateArn
 
-  CloudFrontLoginCNAMERecord:
-    Type: AWS::Route53::RecordSet
-    Properties:
-      HostedZoneId: !Ref HostedZoneId
-      Name: !Ref CognitoCustomDomainName
-      Type: CNAME
-      TTL: 300
-      ResourceRecords:
-        - !GetAtt CognitoCustomDomain.CloudFrontDistribution
+  ## TODO: Automate this as this is created manually yo avoid cycle dependency with
+  # CloudFrontLoginCNAMERecord:
+  #   Type: AWS::Route53::RecordSet
+  #   Properties:
+  #     HostedZoneId: !Ref HostedZoneId
+  #     Name: !Ref CognitoCustomDomainName
+  #     Type: CNAME
+  #     TTL: 300
+  #     ResourceRecords:
+  #       - !GetAtt CognitoCustomDomain.CloudFrontDistribution
 
   AdminUserGroup:
     Type: AWS::Cognito::UserPoolGroup
