--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -85,17 +85,6 @@ Resources:
       CustomDomainConfig:
         CertificateArn: !Ref AcmCertificateArn
 
-  ## TODO: Automate this as this is created manually yo avoid cycle dependency with
-  # CloudFrontLoginCNAMERecord:
-  #   Type: AWS::Route53::RecordSet
-  #   Properties:
-  #     HostedZoneId: !Ref HostedZoneId
-  #     Name: !Ref CognitoCustomDomainName
-  #     Type: CNAME
-  #     TTL: 300
-  #     ResourceRecords:
-  #       - !GetAtt CognitoCustomDomain.CloudFrontDistribution
-
   AdminUserGroup:
     Type: AWS::Cognito::UserPoolGroup
     Properties:
@@ -125,3 +114,5 @@ Outputs:
     Value: !Ref CognitoUserPool
   CognitoUserPoolClient:
     Value: !Ref CognitoUserPoolClient
+  CognitoCustomDomainCloudFrontDistribution:
+    Value: !GetAtt CognitoCustomDomain.CloudFrontDistribution
