cname creation phase 1

--- a/infrastructure/resources/cognito.yaml
+++ b/infrastructure/resources/cognito.yaml
@@ -116,3 +116,5 @@ Outputs:
     Value: !Ref CognitoUserPoolClient
   CognitoCustomDomainCloudFrontDistribution:
     Value: !GetAtt CognitoCustomDomain.CloudFrontDistribution
+    Export:
+      Name: CognitoCustomDomainCloudFrontDistribution
