--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -20,3 +20,13 @@ Resources:
         HostedZoneId: !Ref GlobalCloudFrontHostedZoneId
         DNSName: !ImportValue CloudFrontDistributionDomainName
         EvaluateTargetHealth: false # Important for CloudFront
+
+  CloudFrontLoginCNAMERecord:
+    Type: AWS::Route53::RecordSet
+    Properties:
+      HostedZoneId: !Ref HostedZoneId
+      Name: !Ref CognitoCustomDomainName
+      Type: CNAME
+      TTL: 300
+      ResourceRecords:
+        - !ImportValue CognitoCustomDomainCloudFrontDistribution
