--- a/template.yaml
+++ b/template.yaml
@@ -49,6 +49,11 @@ Resources:
     Properties:
       TemplateURL: ./infrastructure/resources/hosted-zone.yaml
 
+  DatabaseStack:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: ./infrastructure/resources/dynamodb-stack.yaml
+
   ApiGatewayLambdaStack:
     Type: AWS::CloudFormation::Stack
     DependsOn: DatabaseStack
@@ -56,11 +61,6 @@ Resources:
       TemplateURL: ./infrastructure/resources/api-gateway-lambda.yaml
       Parameters:
         SubDomain: !Ref SubDomain
-
-  DatabaseStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: ./infrastructure/resources/dynamodb-stack.yaml
 
   VerifiedPermissionsStack:
     Type: AWS::CloudFormation::Stack
@@ -82,7 +82,6 @@ Resources:
 
   CognitoStack:
     Type: AWS::CloudFormation::Stack
-    DependsOn: RecordSetStack
     Properties:
       TemplateURL: ./infrastructure/resources/cognito.yaml
       Parameters:
@@ -100,7 +99,9 @@ Resources:
 
   RecordSetStack:
     Type: AWS::CloudFormation::Stack
-    DependsOn: S3BucketCloudFrontStack
+    DependsOn:
+      - S3BucketCloudFrontStack
+      - CognitoStack
     Properties:
       TemplateURL: ./infrastructure/resources/record-set.yaml
       Parameters:
