--- a/infrastructure/resources/record-set.yaml
+++ b/infrastructure/resources/record-set.yaml
@@ -8,6 +8,8 @@ Parameters:
     Type: String
   SubDomain:
     Type: String
+  CognitoCustomDomainName:
+    Type: String
 
 Resources:
   CloudFrontTypeARecord:
